# spot-checking

./: .gitignore  README.md  __main__.py  config.py  pyproject.toml  pyproject.toml.save
data/: README.md
results/: scores.csv
src/: evaluator.py  pipe.py  switcher.py
src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: misc.py
