[tool.poetry]
name = "src"
version = "0.1.0"
description = "A package for spot-checking problems"
authors = ["DueViktor <viktorduep@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1"
sklearn = "^0.0"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
